# 7D2D-DecompilerScript

./: .gitignore  AI_CONTEXT.md  BEHAVIORAL_FLOW_DESIGN.md  Decompile-7D2D.ps1  LICENSE  README.md  RunAnalysis.bat  TOOLKIT_DESIGN.md  TOOLKIT_VALIDATION.md  claude.md  config.example.txt  config.txt
.github/: copilot-instructions.md
docs/: xml-entity-map.md
docs/designs/: BEHAVIORAL_VALIDATION_DESIGN.md  README.md  compact-report-demo.html  compact-report-stylesheet.css
knowledge/: AI_KNOWLEDGE.md  entities.md  events.md  methods.md  modding-patterns.md
tests/XmlIndexer.Tests/: XmlIndexer.Tests.csproj
toolkit/: .gitignore  MOD_QA_ANALYZER_DESIGN.md  QUICKSTART.md  SCHEMA.md  XML_INDEXER_DESIGN.md  schema.sql
toolkit/7d2d-tools/: README.md  pyproject.toml
toolkit/7d2d-tools/tests/: __init__.py
toolkit/7d2d-tools/tools_7d2d/: __init__.py  cli.py  compat.py  db.py  graph.py
toolkit/CallGraphExtractor/: CallExtractor.cs  CallGraphExtractor.csproj  EventFlowExtractor.cs  HarmonyPatchDiscovery.cs  ModAnalyzer.cs  ModParser.cs  ModXmlChangeParser.cs  Program.cs  RoslynParser.cs  SqliteWriter.cs  XmlDefinitionExtractor.cs  XmlPropertyAccessExtractor.cs
toolkit/QueryDb/: Program.cs  QueryDb.csproj
toolkit/XmlIndexer/: BATCH_PROCESSING_SUMMARY.md  ECOSYSTEM_REPORT_UI_PLAN.md  LLM_PROMPT_TEMPLATE.md  PATCH_WEAVER_PLAN.md  Program.cs  RunAnalysis.bat  USER_GUIDE.md  XmlIndexer.csproj  baseline_metrics.txt  batch_001.jsonl  batch_001_old.jsonl  batch_003.jsonl  batch_004.jsonl  batch_005.jsonl  batch_007.jsonl  batch_008.jsonl  batch_009.jsonl  batch_012.jsonl  (+87 more)
(+203 files in other folders)
