[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "7d2d-tools"
version = "0.1.0"
description = "AI-first mod maintenance toolkit for 7 Days to Die"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RK GameMods"}
]
keywords = ["7d2d", "modding", "call-graph", "compatibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "click>=8.0",
    "igraph>=0.11",
    "rich>=13.0",      # Pretty console output
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
7d2d-tools = "tools_7d2d.cli:main"

[project.urls]
"Homepage" = "https://github.com/rk-gamemods/7D2D-DecompilerScript"
"Bug Tracker" = "https://github.com/rk-gamemods/7D2D-DecompilerScript/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools_7d2d*"]
